# vacancy_project2

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: abstract_api.py  api_hh.py  hh.py  json_saver.py  vacancy.py  vacancy_saver_api.py
tests/: test_hh.py  test_json_saver.py  test_vacancy.py
