[tool.poetry]
name = "vacancy_project2"
version = "0.1.0"
description = "Веб-приложение для управления вакансиями"
authors = ["Виктория Даманская Victoria23miha@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.8.2"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
Flask = "3.0.3"
idna = "3.7"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
requests = "2.32.3"
urllib3 = "2.2.2"
Werkzeug = "3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
